--- a/Data Importing.ipynb
+++ b/Data Importing.ipynb
@@ -1,6 +1,388 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "cf5c2594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import cv2\n",
+    "import json\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "3e0bef07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_image(x):\n",
+    "    byte_img = tf.io.read_file(x)\n",
+    "    img = tf.io.decode_jpeg(byte_img)\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "b6088983",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_images = tf.data.Dataset.list_files('aug_data\\\\train\\\\images\\\\*.jpg' , shuffle=False)\n",
+    "train_images = train_images.map(load_image)\n",
+    "train_images = train_images.map(lambda x: tf.image.resize(x , (120,120)))\n",
+    "train_images = train_images.map(lambda x: x/255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "bb9d1057",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_images = tf.data.Dataset.list_files('aug_data\\\\test\\\\images\\\\*.jpg' , shuffle=False)\n",
+    "test_images = test_images.map(load_image)\n",
+    "test_images = test_images.map(lambda x: tf.image.resize(x , (120,120)))\n",
+    "test_images = test_images.map(lambda x: x/255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "d0eda875",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_images = tf.data.Dataset.list_files('aug_data\\\\val\\\\images\\\\*.jpg' , shuffle=False)\n",
+    "val_images = val_images.map(load_image)\n",
+    "val_images = val_images.map(lambda x: tf.image.resize(x , (120,120)))\n",
+    "val_images = val_images.map(lambda x: x/255)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "888227fb",
+   "metadata": {},
+   "source": [
+    "##### Prepare label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "2f13d575",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_labels(label_path):\n",
+    "    with open(label_path.numpy() , 'r' , encoding='utf-8') as f:\n",
+    "        label = json.load(f)\n",
+    "        \n",
+    "    return [label['class']] , label['bbox']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f54ed1c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_labels = tf.data.Dataset.list_files('aug_data\\\\train\\\\labels\\\\*.json' , shuffle=False)\n",
+    "train_labels = train_labels.map(lambda x:tf.py_function(load_labels , [x] , [tf.uint8 , tf.float16]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "9eb38b1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_labels = tf.data.Dataset.list_files('aug_data\\\\test\\\\labels\\\\*.json' , shuffle=False)\n",
+    "test_labels = test_labels.map(lambda x:tf.py_function(load_labels , [x] , [tf.uint8 , tf.float16]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b247e6f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_labels = tf.data.Dataset.list_files('aug_data\\\\val\\\\labels\\\\*.json' , shuffle=False)\n",
+    "val_labels = val_labels.map(lambda x:tf.py_function(load_labels , [x] , [tf.uint8 , tf.float16]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a9bf7ed",
+   "metadata": {},
+   "source": [
+    "#### Create final dataset\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "d5d50dc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = tf.data.Dataset.zip((train_images , train_labels))\n",
+    "train = train.shuffle(5000)\n",
+    "train = train.batch(8)\n",
+    "train = train.prefetch(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "5c5131a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = tf.data.Dataset.zip((train_images , train_labels))\n",
+    "test = test.shuffle(5000)\n",
+    "test = test.batch(8)\n",
+    "test = test.prefetch(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "4f299193",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val = tf.data.Dataset.zip((train_images , train_labels))\n",
+    "val = val.shuffle(5000)\n",
+    "val = val.batch(8)\n",
+    "val = val.prefetch(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d598a137",
+   "metadata": {},
+   "source": [
+    "# Strat with model training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "838a7a85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.layers import Input, Conv2D, Dense, GlobalMaxPooling2D\n",
+    "from tensorflow.keras.applications import VGG16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "1b4dd232",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "58889256/58889256 [==============================] - 5s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "vgg = VGG16(include_top=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "0339f098",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_model():\n",
+    "    input_layer = Input(shape=(120 , 120 , 3))\n",
+    "    \n",
+    "    vgg = VGG16(include_top=False)(input_layer)\n",
+    "    \n",
+    "    # Classification model\n",
+    "    f1 = GlobalMaxPooling2D()(vgg)\n",
+    "    class1 = Dense(2048 , activation='relu')(f1)\n",
+    "    class2 = Dense(1 , activation='sigmoid')(class1)\n",
+    "    \n",
+    "    # Bounding box model\n",
+    "    f2 = GlobalMaxPooling2D()(vgg)\n",
+    "    regress1 = Dense(2048 , activation='relu')(f2)\n",
+    "    regress2 = Dense(4 , activation='sigmoid')(regress1)\n",
+    "    \n",
+    "    facetracker = Model(inputs=input_layer , outputs=[class2 , regress2])\n",
+    "    return facetracker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "2b7f2ee1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"vgg16\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_1 (InputLayer)        [(None, None, None, 3)]   0         \n",
+      "                                                                 \n",
+      " block1_conv1 (Conv2D)       (None, None, None, 64)    1792      \n",
+      "                                                                 \n",
+      " block1_conv2 (Conv2D)       (None, None, None, 64)    36928     \n",
+      "                                                                 \n",
+      " block1_pool (MaxPooling2D)  (None, None, None, 64)    0         \n",
+      "                                                                 \n",
+      " block2_conv1 (Conv2D)       (None, None, None, 128)   73856     \n",
+      "                                                                 \n",
+      " block2_conv2 (Conv2D)       (None, None, None, 128)   147584    \n",
+      "                                                                 \n",
+      " block2_pool (MaxPooling2D)  (None, None, None, 128)   0         \n",
+      "                                                                 \n",
+      " block3_conv1 (Conv2D)       (None, None, None, 256)   295168    \n",
+      "                                                                 \n",
+      " block3_conv2 (Conv2D)       (None, None, None, 256)   590080    \n",
+      "                                                                 \n",
+      " block3_conv3 (Conv2D)       (None, None, None, 256)   590080    \n",
+      "                                                                 \n",
+      " block3_pool (MaxPooling2D)  (None, None, None, 256)   0         \n",
+      "                                                                 \n",
+      " block4_conv1 (Conv2D)       (None, None, None, 512)   1180160   \n",
+      "                                                                 \n",
+      " block4_conv2 (Conv2D)       (None, None, None, 512)   2359808   \n",
+      "                                                                 \n",
+      " block4_conv3 (Conv2D)       (None, None, None, 512)   2359808   \n",
+      "                                                                 \n",
+      " block4_pool (MaxPooling2D)  (None, None, None, 512)   0         \n",
+      "                                                                 \n",
+      " block5_conv1 (Conv2D)       (None, None, None, 512)   2359808   \n",
+      "                                                                 \n",
+      " block5_conv2 (Conv2D)       (None, None, None, 512)   2359808   \n",
+      "                                                                 \n",
+      " block5_conv3 (Conv2D)       (None, None, None, 512)   2359808   \n",
+      "                                                                 \n",
+      " block5_pool (MaxPooling2D)  (None, None, None, 512)   0         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 14,714,688\n",
+      "Trainable params: 14,714,688\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "vgg.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "bffa9389",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "facetracker = build_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "56cbb2cb",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_1\"\n",
+      "__________________________________________________________________________________________________\n",
+      " Layer (type)                   Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      " input_6 (InputLayer)           [(None, 120, 120, 3  0           []                               \n",
+      "                                )]                                                                \n",
+      "                                                                                                  \n",
+      " vgg16 (Functional)             (None, None, None,   14714688    ['input_6[0][0]']                \n",
+      "                                512)                                                              \n",
+      "                                                                                                  \n",
+      " global_max_pooling2d_4 (Global  (None, 512)         0           ['vgg16[0][0]']                  \n",
+      " MaxPooling2D)                                                                                    \n",
+      "                                                                                                  \n",
+      " global_max_pooling2d_5 (Global  (None, 512)         0           ['vgg16[0][0]']                  \n",
+      " MaxPooling2D)                                                                                    \n",
+      "                                                                                                  \n",
+      " dense_8 (Dense)                (None, 2048)         1050624     ['global_max_pooling2d_4[0][0]'] \n",
+      "                                                                                                  \n",
+      " dense_10 (Dense)               (None, 2048)         1050624     ['global_max_pooling2d_5[0][0]'] \n",
+      "                                                                                                  \n",
+      " dense_9 (Dense)                (None, 1)            2049        ['dense_8[0][0]']                \n",
+      "                                                                                                  \n",
+      " dense_11 (Dense)               (None, 4)            8196        ['dense_10[0][0]']               \n",
+      "                                                                                                  \n",
+      "==================================================================================================\n",
+      "Total params: 16,826,181\n",
+      "Trainable params: 16,826,181\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "facetracker.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35336ff9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
